--- a/src/components/styles/resourceListStyle.css
+++ b/src/components/styles/resourceListStyle.css
@@ -1,11 +1,9 @@
 .resourceListWrapper {
   position: relative;
   display: grid;
-  
 }
 
 .resourceListContainer {
-  cursor: pointer;
   width: 100%;
   display: flex;
   align-items: center;
@@ -21,20 +19,25 @@
     .hoverArea {
       border-top-left-radius: 16px;
       border-bottom-left-radius: 16px;
+      &:after{
+        border-top-left-radius: 14px;
+        border-bottom-left-radius: 14px;
+      }
     }
   }
 }
 
 .hoverArea {
+  cursor: pointer;
   position: relative;
   width: 100%;
   &:after {
     content: "";
     position: absolute;
-    top: 0;
-    left: 0;
+    top: -1px;
+    left: -1px;
     width: 100%;
-    height: calc(100% + 1px);
+    height: calc(100% + 2px);
     border: 2px solid transparent;
 
     transition: background-color var(--base-duration) var(--easing-out-expo),
