disabledのスタイルの調整

--- a/src/components/styles/resourceListStyle.css
+++ b/src/components/styles/resourceListStyle.css
@@ -27,7 +27,7 @@
   }
 }
 
-.hoverArea {
+.resourceListContainer:not(.isDisabled) .hoverArea {
   cursor: pointer;
   position: relative;
   width: 100%;
