--- a/src/components/styles/resourceListStyle.css
+++ b/src/components/styles/resourceListStyle.css
@@ -39,7 +39,6 @@
     width: 100%;
     height: calc(100% + 2px);
     border: 2px solid transparent;
-
     transition:
       background-color var(--base-duration) var(--easing-out-expo),
       border-color var(--base-duration) var(--easing-out-expo);
@@ -63,6 +62,7 @@
   text-align: left;
   appearance: none;
   background: none;
+  border: none;
 }
 
 .checkboxArea {
@@ -89,6 +89,11 @@
   color: var(--color-text-body);
   font-weight: var(--weight-bold);
   letter-spacing: 0.04em;
+  appearance: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+  display: block;
 }
 
 .supportText {
