--- a/src/components/styles/resourceListStyle.css
+++ b/src/components/styles/resourceListStyle.css
@@ -27,7 +27,7 @@
   }
 }
 
-.resourceListContainer:not(.isDisabled) .hoverArea{
+.resourceListContainer:not(.isDisabled) .hoverArea {
   cursor: pointer;
   position: relative;
   width: 100%;
@@ -92,10 +92,12 @@
   appearance: none;
   background: none;
   border: none;
-  cursor: pointer;
   display: block;
 }
 
+.resourceListContainer:not(.noInteraction) .title {
+  cursor: pointer;
+}
 .supportText {
   font-size: 0.875rem;
   line-height: 1.7;
