チップラベルの作成

--- a/src/assets/style/color/primitiveColors.scss
+++ b/src/assets/style/color/primitiveColors.scss
@@ -161,19 +161,19 @@
   --color-green-1200: #032213;
 
   /* Lime */
-  ---color-lime-50: #ebfad9;
-  ---color-lime-100: #d0f5a2;
-  ---color-lime-200: #c0f354;
-  ---color-lime-300: #ade830;
-  ---color-lime-400: #9ddd15;
-  ---color-lime-500: #8cc80c;
-  ---color-lime-600: #7eb40d;
-  ---color-lime-700: #6fa104;
-  ---color-lime-800: #618e00;
-  ---color-lime-900: #507500;
-  ---color-lime-1000: #3e5a00;
-  ---color-lime-1100: #2c4100;
-  ---color-lime-1200: #1e2d00;
+  --color-lime-50: #ebfad9;
+  --color-lime-100: #d0f5a2;
+  --color-lime-200: #c0f354;
+  --color-lime-300: #ade830;
+  --color-lime-400: #9ddd15;
+  --color-lime-500: #8cc80c;
+  --color-lime-600: #7eb40d;
+  --color-lime-700: #6fa104;
+  --color-lime-800: #618e00;
+  --color-lime-900: #507500;
+  --color-lime-1000: #3e5a00;
+  --color-lime-1100: #2c4100;
+  --color-lime-1200: #1e2d00;
 
   /* Yellow */
   --color-yellow-50: #fbf5e0;
